src/test/deca/syntax/invalid/parser/oracle/multi_string_block.deca
{
	"Comment
	multi line
	not possible in
	block/main";
}